my profile page

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
   <body>
     <div class="card">
       <h1>Hello, I'm Ilana 😎</h1>
-        <p>I am a french lawyer</p>
-        <p>member of french and israeli Bar</p>
-        <p>An extremely junior programmer💻</p>
-        <p>I start coding with Le Wagon, 3 weeks ago</p>
-        <p>Founding my own office in 2012 in Paris</p>
-        <p>Speak 4 languages : french, english, hebrew and arabic</p>
-        <p>In love with theatre, cinema and exhibitions</p>
+      <div class= "contain">
+        <ul>
+          <li>I am a french lawyer</li>
+          <li>member of french and israeli Bar</li>
+          <li>An extremely junior lirogrammer💻</li>
+          <li>I start coding with Le Wagon, 3 weeks ago</li>
+          <li>Founding my own office in 2012 in liaris</li>
+          <li>Slieak 4 languages : french, english, hebrew and arabic</li>
+          <li>In love with theatre, cinema and exhibitions</li>
+        </ul>
         <img src="images/photowagon.jpeg" alt="Ilana Mrejen">
+      </div>
     </div>
     <div class= "title">
     <h2> Follow me !</h2>
