my profile page

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <ul>
           <li>I am a french lawyer</li>
           <li>member of french and israeli Bar</li>
-          <li>An extremely junior lirogrammer💻</li>
-          <li>I start coding with Le Wagon, 3 weeks ago</li>
-          <li>Founding my own office in 2012 in liaris</li>
-          <li>Slieak 4 languages : french, english, hebrew and arabic</li>
+          <li>An extremely junior programmer💻</li>
+          <li>I start coding with Le Wagon 3 weeks ago</li>
+          <li>Founding my own office in 2012 in Paris</li>
+          <li> I Speak 4 languages : french, english, hebrew and arabic</li>
           <li>In love with theatre, cinema and exhibitions</li>
         </ul>
         <img src="images/photowagon.jpeg" alt="Ilana Mrejen">
